--- a/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
+++ b/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
@@ -143,3 +143,10 @@ h3 {
     position: absolute;
     z-index: -1;
 }
+
+td,
+th {
+    border-width: 2px !important;
+    padding: 2px 5px;
+    text-align: center !important;
+}
