--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/readcsv.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/readcsv.html
@@ -8,8 +8,12 @@
 
         <!-- partial -->
         <!-- partial:partials/_sidebar.html -->
-        {% if user.is_authenticated %}{% include './elements/sidebar.html' %}{% include './elements/csvreadsort.html' %}
-        <div>{{csvfiledata|safe}}</div> {% endif %}
+        {% if user.is_authenticated %}{% include './elements/sidebar.html' %}{% include './elements/csvreadsort.html' with maxRow=maxRow %}
+        <div id="csvfileviewer">
+            <div>Total rows:{{totalRows}}</div>
+            {{csvfiledata|safe}}
+        </div>
+        {% endif %}
 
     </div>
     <!-- page-body-wrapper ends -->
