--- a/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
+++ b/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
@@ -150,3 +150,20 @@ th {
     padding: 2px 5px;
     text-align: center !important;
 }
+
+
+/* view area */
+
+#viewarea {
+    display: none;
+    background-color: rgb(245, 245, 245);
+    border: 1px solid #dfdfb9;
+    width: 60%;
+    height: 500px;
+    border: 2px solid #0a0a08;
+    position: fixed;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+}
