--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/csvupload.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/csvupload.html
@@ -6,7 +6,7 @@
 
         <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            <input type="file" id="fileToUpload" class="mybtn btn btn-info " name="myfile"><br>
+            <input type="file" accept=".csv" id="fileToUpload" class="mybtn btn btn-info " name="myfile"><br>
             <button type="submit" class="mybtn btn btn-info " width="100%">Upload</button>
             <div class="support">Supports: CSV</div>
 
