--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/header.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/header.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="{% static 'vendors/typicons/typicons.css' %}">
     <link rel="stylesheet" href="{% static 'vendors/simple-line-icons/css/simple-line-icons.css' %}">
     <link rel="stylesheet" href="{% static 'vendors/css/vendor.bundle.base.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
 
     <!-- endinject -->
