--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/header.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/header.html
@@ -41,4 +41,5 @@
     />
     <!-- HTMX source -->
     <script src="https://unpkg.com/htmx.org@1.6.0"></script>
+    <script src="https://unpkg.com/@sgratzl/chartjs-chart-boxplot@3.7.1/build/index.umd.min.js"></script>
 </head>
