--- a/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
+++ b/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
@@ -156,10 +156,14 @@ th {
 
 /* view area */
 
+#myChart {
+    background-color: rgb(248, 240, 240);
+}
+
 #viewarea {
-    display: none;
-    background-color: rgb(245, 245, 245);
-    border: 1px solid #dfdfb9;
+    /* display: none; */
+    /* background-color: rgb(121, 81, 81); */
+    /*border: 1px solid #dfdfb9;
     width: 60%;
     height: 500px;
     border: 2px solid #0a0a08;
@@ -167,7 +171,7 @@ th {
     top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3); */
 }
 
 .dataframe {
