fix: minor change in login page design

--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
@@ -179,8 +179,10 @@
 
     </div>
     {% endif %}
+    {% if user.is_authenticated %}
     <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-bs-toggle="offcanvas">
           <span class="mdi mdi-menu"></span>
         </button>
     </div>
+    {% endif %}
 </nav>
