--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/register.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/register.html
@@ -8,9 +8,8 @@
 
         <!-- partial -->
         <!-- partial:partials/_sidebar.html -->
-        <div class="container-fluid">
-            <div class="col-md-offset-4 col-md-4">
-            </div>
+        <div class="container-fluid d-flex align-items-center ">
+            
             <div class="col-md-offset-4 col-md-6 well">
                 <form method="POST" autocomplete="off">
                     <h2 class="text-primary page-header text-center">User Registration</h2>
