--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/login.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/login.html
@@ -8,25 +8,25 @@
 
         <!-- partial -->
         <!-- partial:partials/_sidebar.html -->
-        <div class="container-fluid">
-            <div class="col-md-offset-4 col-md-4">
-            </div>
-            <div class="col-md-offset-4 col-md-4 well">
-                {% if messages %} {% for message in messages %}
-                <div class="alert alert-{{ message.tags }}">
-                    {{ message }}
-                </div>
-                {% endfor %} {% endif %}
-                <form method="POST" autocomplete="off">
-                    <h2 class="text-primary page-header text-center">User Login</h2>
+        <div class="container d-flex align-items-center ">
+            
+                <div class="col-md-offset-4 col-md-4 well">
+                    {% if messages %} {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }}">
+                        {{ message }}
+                    </div>
+                    {% endfor %} {% endif %}
+                    <form method="POST" autocomplete="off">
+                        <h2 class="text-primary page-header text-center">User Login</h2>
 
-                    {% csrf_token %} {{form|crispy}}
-                    <button type="submit" class="btn btn-primary">Login</button>
-                </form>
-                <div>
-                    <a href="{% url 'Register'%}">Sign Up Now</a>
+                        {% csrf_token %} {{form|crispy}}
+                        <button type="submit" class="btn btn-primary">Login</button>
+                    </form>
+                    <div>
+                        <a href="{% url 'Register'%}">Sign Up Now</a>
+                    </div>
                 </div>
-            </div>
+            
         </div>
     </div>
     <!-- page-body-wrapper ends -->
