--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/csvreadsort.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/csvreadsort.html
@@ -2,7 +2,7 @@
     <div style="padding-right:10px;"><br>
         <form method="POST">
             {% csrf_token %}
-            <table border="0">
+            <table border="0" class="sortingtable">
                 <tbody border='0'>
                     <tr>
                         <td>
