--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/readcsv.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/readcsv.html
@@ -13,16 +13,16 @@
             </div>
             <div class"row">Total rows:{{totalRows}}</div>
             <div class="row">
-                <div class="col-11">
+                <div class="col-12">
                     <div id="csvfileviewer">
                         {{csvfiledata|safe}}
                     </div>
                 </div>
-                {% comment %} <div class="col-1">
+                <!-- {% comment %} <div class="col-1">
                     <div>Action</div>
                     <button type="button" class="btn btn-outline-secondary" onclick="showUserEditBox('+object['id']+')">Edit</button>
                     <button type="button" class="btn btn-outline-danger" onclick="userDelete('+object['id']+')">Del</button></td>
-                </div> {% endcomment %}
+                </div> {% endcomment %} -->
                 
             </div>
 
