--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
@@ -13,7 +13,7 @@
                 <h1 style="font-size: revert;">BioWeb</h1>
             </a>
             <a class="navbar-brand brand-logo-mini" href="index.html">
-                <img src="{% static 'images/logo-mini.svg' %}" alt="logo" />
+                <!-- <img src="{% static 'images/logo-mini.svg' %}" alt="logo" /> -->
             </a>
         </div>
     </div>
