--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/boxchart.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/boxchart.html
@@ -13,7 +13,7 @@
                       backgroundColor: 'rgb(11,218,81)',
                       borderColor: 'red',
                       borderWidth: 1,
-                      outlierColor: '#999999',
+                      outlierColor: '#dbeed5',
                       padding: 10,
                       itemRadius: 0,
                       data: [{{posValue}}]
@@ -22,7 +22,7 @@
                       backgroundColor:  '#FF0044',
                       borderColor: 'blue',
                       borderWidth: 1,
-                      outlierColor: '#999999',
+                      outlierColor: '#dbeed5',
                       padding: 10,
                       itemRadius: 0,
                       
