--- a/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
+++ b/Software/Frontend/Host_Pathogen_Interaction/static/css/my/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    z-index: 0;
 }
 
 .uploadSection {
@@ -263,4 +264,38 @@ tbody {
 
 .dataframe>tbody>tr:nth-child(even) {
     background-color: #dbeed5;
+}
+
+.workflow>div>.process {
+    border: 1px solid green;
+    margin: 5px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    line-height: 50px;
+    background-color: rgb(109, 163, 142);
+    border-radius: 50%;
+    /* margin-right: 150px; */
+    z-index: 1;
+}
+
+.workflow>div>.path {
+    /* width: 10px; */
+    border: 1px solid;
+    height: 2px;
+    align-self: center;
+}
+
+.workflow>div>.active {
+    background-color: rgb(0, 255, 200);
+}
+
+#filterform {
+    border: 1px solid red;
+    width: fit-content;
+    padding: 10px;
+    height: 150px;
+    background-color: gainsboro;
+    margin-left: 50px;
+    text-align-last: center;
 }
