--- a/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
+++ b/Software/Frontend/Host_Pathogen_Interaction/template/bioweb/elements/navbar.html
@@ -155,13 +155,13 @@
             <li class="nav-item dropdown d-none d-lg-block user-dropdown">
                 <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false">
                     <!-- <img class="img-xs rounded-circle" src="{% static 'images/faces/Screenshot_from_2022-03-17_18-23-37.png' %}" alt="Profile image"> </a> -->
-                    <img class="img-xs rounded-circle" src="{% static 'images/faces/face8.jpg' %}" alt="Profile image"> </a>
+                    <img class="img-xs rounded-circle" src="{% static 'images/'%}{{user.thumb}}" alt="Profile image"> </a>
                     <!-- <img class="img-md rounded-circle" src="{% static 'images/images/faces/Screenshot_from_2022-03-17_18-23-37.png' %}" alt="Profile image"> -->
                     
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
                     <div class="dropdown-header text-center">
-                        {{user.thumb}}
-                        <img class="img-md rounded-circle" src="{% static 'images/images/Screenshot_from_2022-03-17_18-23-37.png' %}" alt="Profile image">
+                        <img class="img-xs rounded-circle" src="{% static 'images/'%}{{user.thumb}}" alt="Profile image"> </a>
+
                         <p class="mb-1 mt-3 font-weight-semibold">{{ user.get_username }}</p>
                         <p class="fw-light text-muted mb-0">{{user.email}}</p>
                     </div>
